--- a/Frontend/tmf/src/components/Report/Report.module.css
+++ b/Frontend/tmf/src/components/Report/Report.module.css
@@ -11,7 +11,8 @@
   left: 2.75%;
   top: 15%;
   display: flex;
-  margin-left: 8px;
+  margin-left: -3px;
+  padding-top: 16px;
 }
 
 .report-form2 {
@@ -19,6 +20,7 @@
   left: 2.75%;
   top: 22%;
   display: flex;
+  margin-left: -3px;
 }
 
 /* .report-buttons {
